# q-learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: QLearner.hpp  QLearningSimulate.hpp  actionSpace.hpp  core.hpp  core_mh.hpp  currentState.hpp
src/: QLearner.cpp  QLearnerNode.cpp  QLearningSimulate.cpp
